
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Enhanced DIE to accept a single parameter ("comment text") which is sent
    to all locally connected clients before the server goes down.
  - The ngIRCd handles time shifts backwards more gracefully now (the
    timeout handling doesn't disconnect clients by mistake any more).
  - Internal: Restructured connection handling (the connection ID is equal
    to the file descriptor of the connection).
  - Internal: Simplified resolver code.
  - JOIN now supports more than one channel key at a time.
  - Implemented numeric "333": Time and user name who set a channel topic.
  - Enhanced the handler for PING and PONG commands: fix forwarding and enable
    back-passing of a client supplied additional argument of PING.
  - Changed handling of timeouts for unregistered connections: don't reset
    the counter if data is received and disconnect clients earlier.
  - Removed unnecessary #define of "LOCAL", now use plain C "static" instead.
  - Channel topics are no longer limited to 127 characters: now the only limit
    is the maximum length of an IRC command, i. e. 512 bytes (in practice, this
    limits the topic to about 490 characters due to protocol overhead).
  - Reverse DNS lookup code now checks the result by doing an additional
    lookup to prevent spoofing.
  - Added new IO layer which (optionally) supports epoll() and kqueue() in
    addition to the select() interface.

ngIRCd 0.9.2 (2005-10-15)

  - Fixed a bug that could cause the daemon to crash when outgoing server
    connections can't be established.
  - Fixed a bug that caused the daemon to leak file descriptors when no